更新jar，添加动态开关传感器的操作

--- a/TobotApp/src/main/res/values-en-rGB/strings.xml
+++ b/TobotApp/src/main/res/values-en-rGB/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">TongBu Map</string>
-    <string name="tv_sta_tips">tip:please connect to the wireless network connected to the chassis first</string>
+    <string name="tv_sta_tips">please connect to the wireless network connected to the chassis first</string>
     <string name="et_ip_hint_tips">input the IP address of the chassis</string>
     <string name="btn_connect">connect</string>
     <string name="tv_connect_history">connection history</string>
@@ -15,6 +15,9 @@
     <string name="tv_about_app">about app</string>
     <string name="tv_set_speed">navigation speed</string>
     <string name="tv_current_speed_tips">maximum movement speed %.2fM/S</string>
+    <string name="speed_low">speed low</string>
+    <string name="speed_medium">speed medium</string>
+    <string name="speed_high">speed high</string>
     <string name="tv_rotate_speed">rotation angular speed</string>
     <string name="tv_current_rotate_speed_tips">maximum rotation angular speed %.2fM/S</string>
     <string name="navigate_mode">navigation mode</string>
@@ -31,7 +34,7 @@
     <string name="unknown">unknown</string>
     <string name="btn_map_load">load</string>
     <string name="btn_map_delete">delete</string>
-    <string name="tv_bind_now">%1$s(viewing)</string>
+    <string name="tv_bind_now">%1$s(current map)</string>
     <string name="tv_version">%1$s\nversion:%2$s</string>
     <string name="tv_scan_to_download">scan code download TongBu client</string>
     <string name="tv_contact_us">contact us</string>
@@ -52,7 +55,7 @@
     <string name="tv_edit">edit</string>
     <string name="tv_reset_charge">reset charge</string>
     <string name="tv_relocation">relocation</string>
-    <string name="tv_clean_map">clear map</string>
+    <string name="tv_clear_map">clear map</string>
     <string name="tv_save_map">save map</string>
     <string name="tv_build_map">create drawing</string>
     <string name="tv_virtual_wall">virtual wall</string>
@@ -76,15 +79,15 @@
     <string name="move_recover_quality_low_tips">The current location quality is less than %1$d,the navigation cannot be normal,you are advised to manually stop.Please move the machine to a place where the feature points are obvious for relocation operation.</string>
     <string name="relocation_map_tips">positioning…</string>
     <string name="relocation_map_success">relocation succeeded…</string>
-    <string name="relocation_map_fail">relocation failed…</string>
+    <string name="relocation_map_fail">relocation fail…</string>
     <string name="tv_map_switch_tips">are you sure you want to load the map?The current map will be cleared after loading!</string>
     <string name="tv_map_delete_tips">are you sure you want to delete this map?</string>
     <string name="tv_location_delete_tips">are you sure you want to delete this location point?</string>
-    <string name="tv_clean_map_tips">are you sure you want to clear the map?</string>
+    <string name="tv_clear_map_tips">are you sure you want to clear the map?</string>
     <string name="btn_cancel">Cancel</string>
     <string name="btn_confirm">Confirm</string>
-    <string name="set_success_tips">set successfully…</string>
-    <string name="set_fail_tips">setting failed…</string>
+    <string name="set_success_tips">set success…</string>
+    <string name="set_fail_tips">setting fail…</string>
     <string name="name_empty_tips">The location point name cannot be empty,please enter…</string>
     <string name="map_name_empty_tips">The map name cannot be empty,please enter…</string>
     <string name="slam_connect_not_tips">sorry,not connected to the chassis yet</string>
@@ -96,24 +99,26 @@
     <string name="et_hint_edit_location_tips">Please enter the location point name(required)</string>
     <string name="et_hint_edit_location_china_tips">input Chinese name(optional)</string>
     <string name="et_hint_edit_location_english_tips">input English name(optional)</string>
-    <string name="btn_update_location">update point location</string>
-    <string name="tv_config_ultrasonic">sonar switch</string>
-    <string name="btn_ultrasonic_area">sonar area</string>
-    <string name="name_rule_tips">Tips:Please name the locations and points appropriately according to the requirements.It is suggested to name them after the number type.</string>
-    <string name="name_edit_rule_tips">Tips:The name of the location dot and the name in Both Chinese and English can be modified,but cannot be repeated!</string>
-    <string name="map_rule_tips">Tips:Please name the map properly according to the requirements.If the saved map name is consistent with the existing map name,the saved map name will be overwritten.</string>
-    <string name="map_edit_rule_tips">Tips:Please name the map properly according to the requirements.If the saved map name is consistent with the existing map name,the saved map name will be overwritten.</string>
+    <string name="btn_update_location">update location</string>
+    <string name="tv_mark_location">Mark point</string>
+    <string name="et_relocation_area_width">relocation area width(unit:m)</string>
+    <string name="et_relocation_area_height">relocation area height(unit:m)</string>
+    <string name="tv_relocation_area_tips">When the relocation area is 0 in width or height,the relocation is global by default.</string>
+    <string name="name_rule_tips">Please name the locations and points appropriately according to the requirements.It is suggested to name them after the number type.</string>
+    <string name="name_edit_rule_tips">Location point name,Chinese and English name can be modified,but can not be repeated!The marking point is used to set the current position of the robot,and the relocation is used to perform the positioning operation at the current position point.</string>
+    <string name="map_rule_tips">Please name the map properly according to the requirements.If the saved map name is consistent with the existing map name,the saved map name will be overwritten.</string>
+    <string name="map_edit_rule_tips">Please name the map properly according to the requirements.If the saved map name is consistent with the existing map name,the saved map name will be overwritten.</string>
     <string name="map_load_tips">map loading…</string>
-    <string name="map_load_fail_tips">map loading failed…</string>
-    <string name="map_load_success_tips">map loaded successfully…</string>
-    <string name="map_clean_tips">map clearing…</string>
-    <string name="map_clean_success_tips">map cleared successfully…</string>
-    <string name="map_clean_fail_tips">map clearing failed…</string>
+    <string name="map_load_fail_tips">map loading fail…</string>
+    <string name="map_load_success_tips">map loaded success…</string>
+    <string name="map_clear_tips">map clearing…</string>
+    <string name="clear_success_tips">clear success…</string>
+    <string name="clear_fail_tips">clear fail…</string>
     <string name="map_save_tips">map saving…</string>
-    <string name="map_save_success_tips">map saved successfully…</string>
-    <string name="map_save_fail_tips">map save failed…</string>
-    <string name="map_edit_success_tips">map modified successfully…</string>
-    <string name="map_edit_fail_tips">map modification failed…</string>
+    <string name="map_save_success_tips">map save success…</string>
+    <string name="map_save_fail_tips">map save fail…</string>
+    <string name="map_edit_success_tips">map edit success…</string>
+    <string name="map_edit_fail_tips">map edit fail…</string>
     <string name="map_exist_tips">the map name already exists,please rename…</string>
     <string name="number_edit_fail_tips">The location point name already exists,please rename it…</string>
     <string name="name_china_edit_fail_tips">the Chinese name already exists.Please rename it…</string>
@@ -126,23 +131,13 @@
     <string name="tv_ignore">ignore</string>
     <string name="tv_upgrade">update</string>
     <string name="tv_check_version_tips">testing…</string>
-    <string name="download_fail_tips">download failed…</string>
+    <string name="download_fail_tips">download fail…</string>
     <string name="permission_sd_card_open_tips">please open the memory card to save permissions first…</string>
     <string name="tv_apk_download_begin">start download</string>
     <string name="tv_apk_download_tips">downloading the TongBu drawing…</string>
     <string name="tv_apk_content_tips">connecting to server…</string>
     <string name="tv_apk_download_complete">download completed,click Install</string>
-    <string name="tv_point_post_tips">position point coordinates</string>
-    <string name="tv_point_tips">current location point:%1$s</string>
-    <string name="et_hint_start_x">input the starting coordinate X(required)</string>
-    <string name="et_hint_start_y">input the starting coordinate y(required)</string>
-    <string name="et_hint_end_x">input the end coordinate X(required)</string>
-    <string name="et_hint_end_y">input the ending coordinate y(required)</string>
-    <string name="start_x_empty_tips">starting coordinate X cannot be empty,please enter…</string>
-    <string name="start_y_empty_tips">starting coordinate y cannot be empty,please enter…</string>
-    <string name="end_x_empty_tips">end coordinate X cannot be empty,please enter…</string>
-    <string name="end_y_empty_tips">end coordinate y cannot be empty,please enter…</string>
-    <string name="pose_request_success_tips">location point obtained successfully…</string>
+    <string name="pose_request_success_tips">location point obtained success…</string>
     <string name="pose_request_fail_tips">sorry,failed to get location point,please try again later…</string>
     <string name="tv_create_task">create task</string>
     <string name="task_point_empty_tips">please create a location point first…</string>
@@ -164,7 +159,6 @@
     <string name="tv_wipe_black">black</string>
     <string name="tv_wipe_cancel">Cancel</string>
     <string name="point_sort_success">sorting succeeded…</string>
-    <string name="btn_known">I know</string>
     <string name="tv_current_low_battery_tips">minimum power %1$d</string>
     <string name="log_file_out">Log file out(%1$s)</string>
     <string name="log_no">Nothing</string>
@@ -177,24 +171,23 @@
     <string name="rotate_speed_empty_tips">rotation angle value cannot be empty</string>
     <string name="tv_save_task">save task</string>
     <string name="et_hint_task_tips">input task name</string>
-    <string name="tv_task_tips">warm tip:task name represents the flag of the created task,which cannot be repeated!</string>
+    <string name="tv_task_tips">task name represents the flag of the created task,which cannot be repeated!</string>
     <string name="task_empty_tips">task name cannot be empty…</string>
     <string name="task_name_exist_tips">path name already exists,please rename…</string>
-    <string name="tv_execute_task_tips">prompt:please confirm whether the task matches the current map(click execute,long press Delete)</string>
+    <string name="tv_execute_task_tips">please confirm whether the task matches the current map(click execute,long press Delete)</string>
     <string name="tv_implement_count">number of cycles:%1$d</string>
     <string name="tv_task_point_tips">trajectory\n%1$s</string>
     <string name="tv_charge_switch">add back pile charging</string>
-    <string name="tv_charge_switch_tips">Tip:If charging is turned on,pile charging will be added back to the motion track</string>
-    <string name="tv_loop_tips">prompt:if infinite cycles are enabled,infinite cycles will be executed first,and the number of cycles will be invalid</string>
-    <string name="tv_socket_connect_success_tips">socket connected</string>
+    <string name="tv_charge_switch_tips">If charging is turned on,pile charging will be added back to the motion track</string>
+    <string name="tv_loop_tips">if infinite cycles are enabled,infinite cycles will be executed first,and the number of cycles will be invalid</string>
     <string name="tv_signal_tips">network signal:%1$d(%2$s)</string>
     <string name="signal_1">strong</string>
     <string name="signal_2">relatively strong</string>
     <string name="signal_3">general</string>
     <string name="slam_disconnect_tips">Chassis connection disconnects,please exit current application!(%1$s)</string>
-    <string name="operate_error_tips">operation failed…</string>
+    <string name="operate_error_tips">operate fail…</string>
     <string name="tv_reset_charge_title">reset charge</string>
-    <string name="tv_reset_charge_tips">The steps are as follows:\n1,move the charging pile to a new position \n2,navigate or push the machine to the charging pile and it is in the charging state \n3,click "relocation",click "reset" \n4,navigate the machine out of the charging pile,and the reset is successful</string>
+    <string name="tv_reset_charge_tips">The steps are as follows:\n1,move the charging pile to a new position \n2,navigate or push the machine to the charging pile and it is in the charging state \n3,click "relocation",click "reset" \n4,navigate the machine out of the charging pile,and the reset is success</string>
     <string name="btn_reset">reset</string>
     <string name="reset_not_charge_tips">please move the machine to the charging point first</string>
     <string name="reset_success_tips">reset success…</string>
@@ -208,6 +201,7 @@
     <string name="get_sensor_count">sensor count</string>
     <string name="get_sensor_status">sensor status</string>
     <string name="set_sensor_status">Control sensor data reporting</string>
+    <string name="tv_sensor_info">sensor info</string>
     <string name="get_sensor_detect_info">sensor detect info</string>
     <string name="firmware_upgrade">firmware upgrade</string>
     <string name="et_sensor_num_hint_tips">enter number(from 0)</string>
@@ -227,7 +221,7 @@
     <string name="tv_upgrade_file_tips">Are you sure you want to upgrade the %1$s file?(Upgrade is time consuming,please do not interrupt!)</string>
     <string name="upgrade_ing">upgrading…</string>
     <string name="firmware_upgrade_success_tips">Upgrade success!Please manually restart the chassis and exit the current application!</string>
-    <string name="firmware_upgrade_fail_tips">Upgrade failed!Please re-open the current application and wait to connect the chassis before performing the upgrade!(If you fail,try many times.)</string>
+    <string name="firmware_upgrade_fail_tips">Upgrade fail!Please re-open the current application and wait to connect the chassis before performing the upgrade!(If you fail,try many times.)</string>
     <string name="trigger_true">trigger</string>
     <string name="trigger_false">no trigger</string>
     <string name="tv_query_frequency">query frequency</string>
@@ -237,8 +231,35 @@
     <string name="tv_type">type</string>
     <string name="tv_count">count</string>
     <string name="control_software_version_not_match">Control board firmware failed to load,please update…</string>
-    <string name="tv_chassis_radius_tips">Chassis radius:%1$sM</string>
-    <string name="et_chassis_radius_hint">enter chassis radius(unit: meter)</string>
-    <string name="chassis_radius_empty_tips">Chassis radius value cannot be empty,please enter…</string>
+    <string name="tv_chassis_radius">Chassis radius:%1$sM</string>
+    <string name="et_chassis_radius_hint">enter chassis radius(unit:meter)</string>
+    <string name="tv_chassis_radius_tips">Subtract the chassis radius when resetting the charging pile.</string>
+    <string name="chassis_radius_empty_tips">Chassis radius cannot be empty…</string>
     <string name="btn_set">Set</string>
+    <string name="tv_navigate_parameter">Run parameter</string>
+    <string name="tv_relocation_quality_min">The lowest relocation quality:%1$d</string>
+    <string name="et_relocation_quality_hint">enter relocation quality(1~100)</string>
+    <string name="tv_relocation_quality_min_tips">During navigation,if the positioning quality is less than this value for three consecutive times,the system actively performs relocation.</string>
+    <string name="relocation_quality_empty_tips">relocation quality cannot be empty…</string>
+    <string name="tv_relocation_quality_safe">relocation the safety value:%1$d</string>
+    <string name="tv_relocation_quality_safe_tips">When navigation relocation fails,if the positioning quality is higher than this value,the system considers it safe and can continue navigation.</string>
+    <string name="tv_charge_start_distance">Test the distance of pile when charging:%1$sM</string>
+    <string name="et_charge_start_distance_hint">enter charging distance(unit:meter)</string>
+    <string name="charge_distance_empty_tips">charging distance cannot be empty…</string>
+    <string name="tv_charge_start_distance_tips">The detection distance of pile refers to the distance between lidar and pile.If the test starts 0.2 meters ahead of the charging pile and the chassis radius is 0.25 meters,the test distance is 0.45 meters.</string>
+    <string name="tv_charge_offset">Offset value to pile when charging:%1$sM</string>
+    <string name="et_charge_offset_hint">enter Offset value(unit:meter)</string>
+    <string name="charge_offset_empty_tips">Offset value cannot be empty…</string>
+    <string name="tv_charge_offset_tips">When charging back to pile,if it is greater than the set offset value,it will continue to try.After a certain number of attempts,it will stop and return the result of charging failure.</string>
+    <string name="set_pose_tips">marking…</string>
+    <string name="btn_close_sensor">close sensor</string>
+    <string name="all">All</string>
+    <string name="et_area_width_hint">enter width(unit:meter)</string>
+    <string name="et_area_height_hint">enter height(unit:meter)</string>
+    <string name="tv_close_sensor_tips">After setting the sensor area at the current position point,the navigation will actively close the specified sensor when passing through the area.</string>
+    <string name="area_width_empty_tips">width cannot be empty…</string>
+    <string name="area_height_empty_tips">height cannot be empty…</string>
+    <string name="relocation_global">Relocation Global</string>
+    <string name="relocation_part">Relocation Part</string>
+    <string name="tv_relocation_part_tips">Please select the area where the machine is located on the map.If the selected area is too small,it will not work.Click the "Stop" button to cancel the current operation.</string>
 </resources>
