--- a/TobotApp/src/main/res/values-zh-rTW/strings.xml
+++ b/TobotApp/src/main/res/values-zh-rTW/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">瞳步建圖</string>
-    <string name="tv_sta_tips">提示：請先連接到底盤連接的無線網絡</string>
+    <string name="tv_sta_tips">請先連接到底盤連接的無線網絡</string>
     <string name="et_ip_hint_tips">請輸入底盤的ip地址</string>
     <string name="btn_connect">連接</string>
     <string name="tv_connect_history">連接歷史記錄</string>
@@ -26,6 +26,7 @@
     <string name="meet_obstacle_suspend">遇障暫停</string>
     <string name="tv_try_time_tips">導航嘗試時間 %1$d 分鐘</string>
     <string name="btn_map_load">加載</string>
+    <string name="tv_bind_now">%1$s(當前地圖)</string>
     <string name="tv_scan_to_download">掃碼下載瞳步客戶端</string>
     <string name="tv_contact_us">聯系我們</string>
     <string name="tv_robot">瞳步機器人</string>
@@ -42,7 +43,7 @@
     <string name="tv_go_charge">充電</string>
     <string name="tv_edit">編輯</string>
     <string name="tv_reset_charge">重置充電樁</string>
-    <string name="tv_clean_map">清除地圖</string>
+    <string name="tv_clear_map">清除地圖</string>
     <string name="tv_save_map">保存地圖</string>
     <string name="tv_build_map">建圖</string>
     <string name="tv_virtual_wall">虛擬墻</string>
@@ -65,7 +66,7 @@
     <string name="tv_map_switch_tips">確認要加載地圖嗎？加載後將會清除當前的地圖！</string>
     <string name="tv_map_delete_tips">確認要刪除該地圖嗎？</string>
     <string name="tv_location_delete_tips">確認要刪除該位置點嗎？</string>
-    <string name="tv_clean_map_tips">確認要清除地圖嗎？</string>
+    <string name="tv_clear_map_tips">確認要清除地圖嗎？</string>
     <string name="btn_confirm">確認</string>
     <string name="set_success_tips">設置成功…</string>
     <string name="set_fail_tips">設置失敗…</string>
@@ -81,18 +82,20 @@
     <string name="et_hint_edit_location_china_tips">請輸入中文名稱（選填）</string>
     <string name="et_hint_edit_location_english_tips">請輸入英文名稱（選填）</string>
     <string name="btn_update_location">更新點位置</string>
-    <string name="tv_config_ultrasonic">超聲波開關</string>
-    <string name="btn_ultrasonic_area">超聲波區域</string>
-    <string name="name_rule_tips">溫馨提示：請按需求合理命名位置點名稱，建議以數字類型命名。</string>
-    <string name="name_edit_rule_tips">溫馨提示：位置點名稱、中英文名稱均可修改，但不能重復！</string>
-    <string name="map_rule_tips">溫馨提示：請按需求合理命名地圖名稱，當保存的地圖名稱與現有地圖名稱壹致時，將會覆蓋保存。</string>
-    <string name="map_edit_rule_tips">溫馨提示：請按需求合理命名地圖名稱，當保存的地圖名稱與現有地圖名稱壹致時，將會覆蓋保存。</string>
+    <string name="tv_mark_location">標定點</string>
+    <string name="et_relocation_area_width">重定位區域寬(單位:米)</string>
+    <string name="et_relocation_area_height">重定位區域高(單位:米)</string>
+    <string name="tv_relocation_area_tips">當重定位區域寬或高為0時，則默認全局重定位。</string>
+    <string name="name_rule_tips">請按需求合理命名位置點名稱，建議以數字類型命名。</string>
+    <string name="name_edit_rule_tips">位置點名稱、中英文名稱均可修改，但不能重復！標定點用來設置機器人當前位置，重定位用於當前位置點執行定位操作。</string>
+    <string name="map_rule_tips">請按需求合理命名地圖名稱，當保存的地圖名稱與現有地圖名稱壹致時，將會覆蓋保存。</string>
+    <string name="map_edit_rule_tips">請按需求合理命名地圖名稱，當保存的地圖名稱與現有地圖名稱壹致時，將會覆蓋保存。</string>
     <string name="map_load_tips">地圖加載中…</string>
     <string name="map_load_fail_tips">地圖加載失敗…</string>
     <string name="map_load_success_tips">地圖加載成功…</string>
-    <string name="map_clean_tips">地圖清除中…</string>
-    <string name="map_clean_success_tips">地圖清除成功…</string>
-    <string name="map_clean_fail_tips">地圖清除失敗…</string>
+    <string name="map_clear_tips">地圖清除中…</string>
+    <string name="clear_success_tips">清除成功…</string>
+    <string name="clear_fail_tips">清除失敗…</string>
     <string name="map_save_tips">地圖保存中…</string>
     <string name="map_save_success_tips">地圖保存成功…</string>
     <string name="map_save_fail_tips">地圖保存失敗…</string>
@@ -114,16 +117,6 @@
     <string name="tv_apk_download_tips">瞳步建圖下載中…</string>
     <string name="tv_apk_content_tips">正在連接服務器…</string>
     <string name="tv_apk_download_complete">下載完成，點擊安裝</string>
-    <string name="tv_point_post_tips">位置點坐標</string>
-    <string name="tv_point_tips">當前位置點：%1$s</string>
-    <string name="et_hint_start_x">請輸入起始坐標x（必填）</string>
-    <string name="et_hint_start_y">請輸入起始坐標y（必填）</string>
-    <string name="et_hint_end_x">請輸入結束坐標x（必填）</string>
-    <string name="et_hint_end_y">請輸入結束坐標y（必填）</string>
-    <string name="start_x_empty_tips">起始坐標x不能為空，請輸入…</string>
-    <string name="start_y_empty_tips">起始坐標y不能為空，請輸入…</string>
-    <string name="end_x_empty_tips">結束坐標x不能為空，請輸入…</string>
-    <string name="end_y_empty_tips">結束坐標y不能為空，請輸入…</string>
     <string name="pose_request_success_tips">位置點獲取成功…</string>
     <string name="pose_request_fail_tips">抱歉，位置點獲取失敗，請稍後再試…</string>
     <string name="tv_create_task">創建任務</string>
@@ -147,16 +140,15 @@
     <string name="rotate_speed_empty_tips">旋轉角度值不能為空</string>
     <string name="tv_save_task">保存任務</string>
     <string name="et_hint_task_tips">請輸入任務名稱</string>
-    <string name="tv_task_tips">溫馨提示：任務名稱代表所創建任務的標誌，不能重復！</string>
+    <string name="tv_task_tips">任務名稱代表所創建任務的標誌，不能重復！</string>
     <string name="task_empty_tips">任務名稱不能為空…</string>
     <string name="task_name_exist_tips">路徑名稱已存在，請重新命名…</string>
-    <string name="tv_execute_task_tips">提示：請確認任務是否匹配當前地圖（點擊執行，長按刪除）</string>
+    <string name="tv_execute_task_tips">請確認任務是否匹配當前地圖（點擊執行，長按刪除）</string>
     <string name="tv_implement_count">循環次數：%1$d</string>
     <string name="tv_task_point_tips">運動軌跡\n%1$s</string>
     <string name="tv_charge_switch">添加回樁充電</string>
-    <string name="tv_charge_switch_tips">提示：若開啟充電，運動軌跡中將添加回樁充電</string>
-    <string name="tv_loop_tips">提示：若開啟無限次循環，則優先無限次循環執行，循環次數將失效</string>
-    <string name="tv_socket_connect_success_tips">Socket已連接</string>
+    <string name="tv_charge_switch_tips">若開啟充電，運動軌跡中將添加回樁充電</string>
+    <string name="tv_loop_tips">若開啟無限次循環，則優先無限次循環執行，循環次數將失效</string>
     <string name="tv_signal_tips">網絡信號：%1$d(%2$s)</string>
     <string name="signal_1">強</string>
     <string name="signal_2">較強</string>
@@ -174,6 +166,7 @@
     <string name="get_sensor_count">獲取傳感器數量</string>
     <string name="get_sensor_status">獲取傳感器狀態</string>
     <string name="set_sensor_status">控制傳感器數據上報</string>
+    <string name="tv_sensor_info">傳感器信息</string>
     <string name="get_sensor_detect_info">查詢傳感器檢測信息</string>
     <string name="firmware_upgrade">固件升級</string>
     <string name="et_sensor_num_hint_tips">請輸入編號（從0開始）</string>
@@ -199,8 +192,31 @@
     <string name="tv_type">類型</string>
     <string name="tv_count">次數</string>
     <string name="control_software_version_not_match">控製板固件加載失敗，請更新…</string>
-    <string name="tv_chassis_radius_tips">底盤半徑：%1$sM</string>
-    <string name="et_chassis_radius_hint">請輸入底盤半徑(單位：米)</string>
-    <string name="chassis_radius_empty_tips">底盤半徑值不能為空，請輸入…</string>
+    <string name="tv_chassis_radius">底盤半徑：%1$sM</string>
+    <string name="et_chassis_radius_hint">請輸入底盤半徑(單位:米)</string>
+    <string name="tv_chassis_radius_tips">當重置充電樁時需要減去底盤半徑。</string>
+    <string name="chassis_radius_empty_tips">底盤半徑不能為空，請輸入…</string>
     <string name="btn_set">設置</string>
+    <string name="tv_navigate_parameter">運行參數</string>
+    <string name="tv_relocation_quality_min">重定位最低定位質量：%1$d</string>
+    <string name="et_relocation_quality_hint">請輸入定位質量(1~100)</string>
+    <string name="tv_relocation_quality_min_tips">導航過程中，當定位質量連續小於該值3次時，將會主動執行重定位操作。</string>
+    <string name="relocation_quality_empty_tips">定位質量不能為空，請輸入…</string>
+    <string name="tv_relocation_quality_safe_tips">當導航重定位失敗時，如果定位質量高於該值時，則認為安全，可以繼續導航。</string>
+    <string name="tv_charge_start_distance">充電時對樁檢測距離：%1$sM</string>
+    <string name="et_charge_start_distance_hint">請輸入檢測距離(單位:米)</string>
+    <string name="charge_distance_empty_tips">檢測距離不能為空，請輸入…</string>
+    <string name="tv_charge_start_distance_tips">對樁檢測距離是指激光雷達到樁的距離。如果在充電樁前0.2米開始檢測對樁，底盤半徑為0.25米，則檢測距離為0.45米。</string>
+    <string name="tv_charge_offset">充電時對樁偏移值：%1$sM</string>
+    <string name="et_charge_offset_hint">請輸入對樁偏移值(單位:米)</string>
+    <string name="charge_offset_empty_tips">偏移值不能為空，請輸入…</string>
+    <string name="tv_charge_offset_tips">當充電後退對樁時，如果大於設定的偏移值時，將會繼續嘗試，嘗試一定次數後將停止，並返回充電失敗的結果。</string>
+    <string name="set_pose_tips">標定中…</string>
+    <string name="btn_close_sensor">關閉傳感器</string>
+    <string name="et_area_width_hint">請輸入寬(單位:米)</string>
+    <string name="et_area_height_hint">請輸入高(單位:米)</string>
+    <string name="tv_close_sensor_tips">以當前位置點設置傳感器區域後，當導航經過該區域時，將會主動關閉指定的傳感器。</string>
+    <string name="area_width_empty_tips">寬不能為空，請輸入…</string>
+    <string name="area_height_empty_tips">高不能為空，請輸入…</string>
+    <string name="tv_relocation_part_tips">請選擇機器在地圖實際位置的區域，如果選擇的區域太小則不起作用，點擊“停止”按鈕可以取消當前操作。</string>
 </resources>
