更新jar，添加动态开关传感器的操作

--- a/TobotApp/src/main/res/values/strings.xml
+++ b/TobotApp/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">瞳步建图</string>
     <string name="ip_chassis">192.168.11.1</string>
     <string name="ip_socket">192.168.11.3</string>
-    <string name="tv_sta_tips">提示：请先连接到底盘连接的无线网络</string>
+    <string name="tv_sta_tips">请先连接到底盘连接的无线网络</string>
     <string name="et_ip_hint_tips">请输入底盘的ip地址</string>
     <string name="btn_connect">连接</string>
     <string name="tv_connect_history">连接历史记录</string>
@@ -17,6 +17,9 @@
     <string name="tv_about_app">关于APP</string>
     <string name="tv_set_speed">导航速度</string>
     <string name="tv_current_speed_tips">最大运动速度%.2fM/S</string>
+    <string name="speed_low">低速</string>
+    <string name="speed_medium">中速</string>
+    <string name="speed_high">高速</string>
     <string name="tv_rotate_speed">旋转角速度</string>
     <string name="tv_current_rotate_speed_tips">最大旋转角速度%.2fM/S</string>
     <string name="navigate_mode">导航模式</string>
@@ -33,7 +36,7 @@
     <string name="unknown">未知</string>
     <string name="btn_map_load">加载</string>
     <string name="btn_map_delete">删除</string>
-    <string name="tv_bind_now">%1$s（查看中）</string>
+    <string name="tv_bind_now">%1$s(当前地图)</string>
     <string name="tv_version">%1$s\n版本：%2$s</string>
     <string name="tv_scan_to_download">扫码下载瞳步客户端</string>
     <string name="tv_contact_us">联系我们</string>
@@ -55,7 +58,7 @@
     <string name="tv_edit">编辑</string>
     <string name="tv_reset_charge">重置充电桩</string>
     <string name="tv_relocation">重定位</string>
-    <string name="tv_clean_map">清除地图</string>
+    <string name="tv_clear_map">清除地图</string>
     <string name="tv_save_map">保存地图</string>
     <string name="tv_build_map">建图</string>
     <string name="tv_virtual_wall">虚拟墙</string>
@@ -83,7 +86,7 @@
     <string name="tv_map_switch_tips">确认要加载地图吗？加载后将会清除当前的地图！</string>
     <string name="tv_map_delete_tips">确认要删除该地图吗？</string>
     <string name="tv_location_delete_tips">确认要删除该位置点吗？</string>
-    <string name="tv_clean_map_tips">确认要清除地图吗？</string>
+    <string name="tv_clear_map_tips">确认要清除地图吗？</string>
     <string name="btn_cancel">取消</string>
     <string name="btn_confirm">确认</string>
     <string name="set_success_tips">设置成功…</string>
@@ -100,18 +103,20 @@
     <string name="et_hint_edit_location_china_tips">请输入中文名称（选填）</string>
     <string name="et_hint_edit_location_english_tips">请输入英文名称（选填）</string>
     <string name="btn_update_location">更新点位置</string>
-    <string name="tv_config_ultrasonic">超声波开关</string>
-    <string name="btn_ultrasonic_area">超声波区域</string>
-    <string name="name_rule_tips">温馨提示：请按需求合理命名位置点名称，建议以数字类型命名。</string>
-    <string name="name_edit_rule_tips">温馨提示：位置点名称、中英文名称均可修改，但不能重复！</string>
-    <string name="map_rule_tips">温馨提示：请按需求合理命名地图名称，当保存的地图名称与现有地图名称一致时，将会覆盖保存。</string>
-    <string name="map_edit_rule_tips">温馨提示：请按需求合理命名地图名称，当保存的地图名称与现有地图名称一致时，将会覆盖保存。</string>
+    <string name="tv_mark_location">标定点</string>
+    <string name="et_relocation_area_width">重定位区域宽(单位:米)</string>
+    <string name="et_relocation_area_height">重定位区域高(单位:米)</string>
+    <string name="tv_relocation_area_tips">当重定位区域宽或高为0时，则默认全局重定位。</string>
+    <string name="name_rule_tips">请按需求合理命名位置点名称，建议以数字类型命名。</string>
+    <string name="name_edit_rule_tips">位置点名称、中英文名称均可修改，但不能重复！标定点用来设置机器人当前位置，重定位用于当前位置点执行定位操作。</string>
+    <string name="map_rule_tips">请按需求合理命名地图名称，当保存的地图名称与现有地图名称一致时，将会覆盖保存。</string>
+    <string name="map_edit_rule_tips">请按需求合理命名地图名称，当保存的地图名称与现有地图名称一致时，将会覆盖保存。</string>
     <string name="map_load_tips">地图加载中…</string>
     <string name="map_load_fail_tips">地图加载失败…</string>
     <string name="map_load_success_tips">地图加载成功…</string>
-    <string name="map_clean_tips">地图清除中…</string>
-    <string name="map_clean_success_tips">地图清除成功…</string>
-    <string name="map_clean_fail_tips">地图清除失败…</string>
+    <string name="map_clear_tips">地图清除中…</string>
+    <string name="clear_success_tips">清除成功…</string>
+    <string name="clear_fail_tips">清除失败…</string>
     <string name="map_save_tips">地图保存中…</string>
     <string name="map_save_success_tips">地图保存成功…</string>
     <string name="map_save_fail_tips">地图保存失败…</string>
@@ -135,17 +140,6 @@
     <string name="tv_apk_download_tips">瞳步建图下载中…</string>
     <string name="tv_apk_content_tips">正在连接服务器…</string>
     <string name="tv_apk_download_complete">下载完成，点击安装</string>
-    <string name="tv_point_post_tips">位置点坐标</string>
-    <string name="tv_point_tips">当前位置点：%1$s</string>
-    <string name="et_hint_start_x">请输入起始坐标x（必填）</string>
-    <string name="et_hint_start_y">请输入起始坐标y（必填）</string>
-    <string name="et_hint_end_x">请输入结束坐标x（必填）</string>
-    <string name="et_hint_end_y">请输入结束坐标y（必填）</string>
-    <string name="start_x_empty_tips">起始坐标x不能为空，请输入…</string>
-    <string name="start_y_empty_tips">起始坐标y不能为空，请输入…</string>
-    <string name="end_x_empty_tips">结束坐标x不能为空，请输入…</string>
-    <string name="end_y_empty_tips">结束坐标y不能为空，请输入…</string>
-    <string name="tv_pose_tips">x：%1$f\ny：%2$f</string>
     <string name="pose_request_success_tips">位置点获取成功…</string>
     <string name="pose_request_fail_tips">抱歉，位置点获取失败，请稍后再试…</string>
     <string name="tv_create_task">创建任务</string>
@@ -186,17 +180,16 @@
     <string name="rotate_speed_empty_tips">旋转角度值不能为空</string>
     <string name="tv_save_task">保存任务</string>
     <string name="et_hint_task_tips">请输入任务名称</string>
-    <string name="tv_task_tips">温馨提示：任务名称代表所创建任务的标志，不能重复！</string>
+    <string name="tv_task_tips">任务名称代表所创建任务的标志，不能重复！</string>
     <string name="task_empty_tips">任务名称不能为空…</string>
     <string name="task_name_exist_tips">路径名称已存在，请重新命名…</string>
-    <string name="tv_execute_task_tips">提示：请确认任务是否匹配当前地图（点击执行，长按删除）</string>
+    <string name="tv_execute_task_tips">请确认任务是否匹配当前地图（点击执行，长按删除）</string>
     <string name="tv_task_point">%1$s[%2$s]</string>
     <string name="tv_implement_count">循环次数：%1$d</string>
     <string name="tv_task_point_tips">运动轨迹\n%1$s</string>
     <string name="tv_charge_switch">添加回桩充电</string>
-    <string name="tv_charge_switch_tips">提示：若开启充电，运动轨迹中将添加回桩充电</string>
-    <string name="tv_loop_tips">提示：若开启无限次循环，则优先无限次循环执行，循环次数将失效</string>
-    <string name="tv_socket_connect_success_tips">Socket已连接</string>
+    <string name="tv_charge_switch_tips">若开启充电，运动轨迹中将添加回桩充电</string>
+    <string name="tv_loop_tips">若开启无限次循环，则优先无限次循环执行，循环次数将失效</string>
     <string name="tv_signal_tips">网络信号：%1$d(%2$s)</string>
     <string name="signal_1">强</string>
     <string name="signal_2">较强</string>
@@ -218,6 +211,7 @@
     <string name="get_sensor_count">获取传感器数量</string>
     <string name="get_sensor_status">获取传感器状态</string>
     <string name="set_sensor_status">控制传感器数据上报</string>
+    <string name="tv_sensor_info">传感器信息</string>
     <string name="get_sensor_detect_info">查询传感器检测信息</string>
     <string name="firmware_upgrade">固件升级</string>
     <string name="et_sensor_num_hint_tips">请输入编号（从0开始）</string>
@@ -252,8 +246,35 @@
     <string name="task_time_limited">%1$d/%2$d</string>
     <string name="task_time_infinite">%1$d/∞</string>
     <string name="control_software_version_not_match">控制板固件加载失败，请更新…</string>
-    <string name="tv_chassis_radius_tips">底盘半径：%1$sM</string>
-    <string name="et_chassis_radius_hint">请输入底盘半径(单位：米)</string>
-    <string name="chassis_radius_empty_tips">底盘半径值不能为空，请输入…</string>
+    <string name="tv_chassis_radius">底盘半径：%1$sM</string>
+    <string name="et_chassis_radius_hint">请输入底盘半径(单位:米)</string>
+    <string name="tv_chassis_radius_tips">当重置充电桩时需要減去底盘半径。</string>
+    <string name="chassis_radius_empty_tips">底盘半径不能为空，请输入…</string>
     <string name="btn_set">设置</string>
+    <string name="tv_navigate_parameter">运行参数</string>
+    <string name="tv_relocation_quality_min">重定位最低定位质量：%1$d</string>
+    <string name="et_relocation_quality_hint">请输入定位质量(1~100)</string>
+    <string name="tv_relocation_quality_min_tips">导航过程中，当定位质量连续小于该值3次时，将会主动执行重定位操作。</string>
+    <string name="relocation_quality_empty_tips">定位质量不能为空，请输入…</string>
+    <string name="tv_relocation_quality_safe">重定位安全值：%1$d</string>
+    <string name="tv_relocation_quality_safe_tips">当导航重定位失败时，如果定位质量高于该值时，则认为安全，可以继续导航。</string>
+    <string name="tv_charge_start_distance">充电时对桩检测距离：%1$sM</string>
+    <string name="et_charge_start_distance_hint">请输入检测距离(单位:米)</string>
+    <string name="charge_distance_empty_tips">检测距离不能为空，请输入…</string>
+    <string name="tv_charge_start_distance_tips">对桩检测距离是指激光雷达到桩的距离。如果在充电桩前0.2米开始检测对桩，底盘半径为0.25米，则检测距离为0.45米。</string>
+    <string name="tv_charge_offset">充电时对桩偏移值：%1$sM</string>
+    <string name="et_charge_offset_hint">请输入对桩偏移值(单位:米)</string>
+    <string name="charge_offset_empty_tips">偏移值不能为空，请输入…</string>
+    <string name="tv_charge_offset_tips">当充电后退对桩时，如果大于设定的偏移值时，将会继续尝试，尝试一定次数后将停止，并返回充电失败的结果。</string>
+    <string name="set_pose_tips">标定中…</string>
+    <string name="btn_close_sensor">关闭传感器</string>
+    <string name="all">全部</string>
+    <string name="et_area_width_hint">请输入宽(单位:米)</string>
+    <string name="et_area_height_hint">请输入高(单位:米)</string>
+    <string name="tv_close_sensor_tips">以当前位置点设置传感器区域后，当导航经过该区域时，将会主动关闭指定的传感器。</string>
+    <string name="area_width_empty_tips">宽不能为空，请输入…</string>
+    <string name="area_height_empty_tips">高不能为空，请输入…</string>
+    <string name="relocation_global">全局重定位</string>
+    <string name="relocation_part">局部重定位</string>
+    <string name="tv_relocation_part_tips">请选择机器在地图实际位置的区域，如果选择的区域太小则不起作用，点击“停止”按钮可以取消当前操作。</string>
 </resources>
